kubernetes/apps/gitea/gitea/app/virtualservice.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.istio.io/virtualservice_v1.json
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: gitea
  namespace: gitea
spec:
  hosts:
    - gitea.${SECRET_DOMAIN}
  gateways:
    - istio-ingress/external-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: gitea-http.gitea.svc.cluster.local
            port:
              number: 3000
